Use previous target path when resuming a download after crash

When resuming a download after browser crash, Chrome will regenerate the target path.
This could reintroduce name conflict if user has resolved a conflict before the crash.
This CL reuses the previous target path Chrome has already generated for the download.

BUG=678835

Review-Url: https://codereview.chromium.org/2618743006
Cr-Commit-Position: refs/heads/master@{#446218}

Former-commit-id: 41231a3e20197bf9499332f02c69a426186f5fbe